2009-09-04  Benjamin Kosnik  <bkoz@redhat.com>

	Revert.
	2009-08-06  Benjamin Kosnik  <bkoz@redhat.com>
	* src/compatibility.cc: Make C++0x safe, add in explicit casts to
	bool for stream sentry objects.
	* include/bits/istream.tcc: Same.
	* include/bits/ostream.tcc: Same.
	* include/bits/basic_string.tcc: Same.
	* include/bits/ostream_insert.h: Same.
	* src/istream.cc: Same.

2009-09-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure.ac: Replace AC_CONFIG_COMMANDS([default])
	instantiation with additional commands issued for each Makefile
	in glibcxx_SUBDIRS, so `./config.status subdir/Makefile' also
	runs these commands.
	Add a separate AC_CONFIG_COMMANDS([generate-headers]) for
	running `make' in include, passing `pch_build=' to `make'.
	* configure: Regenerate.

	PR libstdc++/41220
	* include/Makefile.am (CLEANFILES): Add stamp-host.
	* include/Makefile.in: Regenerate.

2009-09-02  Joseph Myers  <joseph@codesourcery.com>

	* testsuite/lib/libstdc++.exp (libstdc++_init): Copy .tcc files
	under util/ to remote host.  Copy .h and .hpp files at more levels
	under util/ to remote host.

2009-09-02  Paolo Carlini  <paolo.carlini@oracle.com>

	* include/bits/stl_uninitialized.h
	(__uninitialized_copy::uninitialized_copy): Just call (the now
	forwarding) _Construct.

2009-09-01  Chris Jefferson  <chris@bubblescope.net>
	    Paolo Carlini  <paolo.carlini@oracle.com>

	* testsuite/util/testsuite_rvalref.h: Remove obsolete macro using
	_GLIBCXX_TESTSUITE_ALLOW_RVALREF_ALIASING.
	* testsuite/20_util/specialized_algorithms/uninitialized_copy_n/
	move_iterators/1.cc: Adjust, do not define
	_GLIBCXX_TESTSUITE_ALLOW_RVALREF_ALIASING.
	* testsuite/20_util/specialized_algorithms/uninitialized_copy/
	move_iterators/1.cc: Likewise.
	* testsuite/25_algorithms/copy_n/move_iterators/1.cc: Likewise.
	* testsuite/25_algorithms/move/1.cc: Likewise.
	* testsuite/25_algorithms/move_backward/1.cc: Likewise.
	* testsuite/25_algorithms/copy_backward/move_iterators/1.cc: Likewise.